# Victorin

./: .gitignore  2_relay_off.py  2_relay_on.py  Cargo.toml  LICENSE  README.md  cmd.py  main.py  off.py  on.py  test1.py  test2.py  test3.py
IOS/: Podfile
IOS/Victorin/: AppDelegate.swift  ContentView.swift  GoogleService-Info.plist  Persistence.swift  VictorinApp.swift  WebSocketManager.swift
IOS/Victorin.xcodeproj/: project.pbxproj
IOS/Victorin/Assets.xcassets/plant.imageset/: Contents.json
IOS/Victorin/Victorin.xcdatamodeld/: .xccurrentversion
crates/v/: Cargo.toml
crates/v/.cargo/: config.toml
crates/v/src/: main.rs
crates/victorin_esp32/: Cargo.toml
crates/victorin_esp32/src/: main.rs
crates/victorin_server/: Cargo.toml
crates/victorin_server/src/: main.rs
crates/victorin_server/src/config/: config.rs  system.yaml
crates/victorin_server/src/plants/: plant.rs
crates/victorin_server/src/server/: filters.rs  handlers.rs  server.rs
crates/victorin_server/src/system/: device.rs  system.rs
esp32/: boot.py
ml/: README.md  image_scraper.py  stat_scraper.py
raspi_server/: Cargo.toml
raspi_server/src/: main.rs  plant.rs
raspi_server/src/config/: config.rs  system.yaml
raspi_server/src/server/: filters.rs  handlers.rs  server.rs
raspi_server/src/system/: system.rs
src/: lib.rs  main.rs  plant.rs
src/config/: system.yaml
src/plants/: plant.rs
src/server/: filters.rs  handlers.rs  mod.rs  server.rs
src/system/: device.rs  mod.rs  system.rs
(+3 files in other folders)
