[package]
name = "victorin_esp32"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clippy = "0.0.302"
rppal = "0.22.1"
tokio = { version = "1.43.0", features = ["rt", "macros", "time", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
warp = "0.3.7"
reqwest = "0.12.12"